--- a/Proyecto/vercel.json
+++ b/Proyecto/vercel.json
@@ -5,9 +5,8 @@
         "use": "@vercel/python"
       }
     ],
-    "routes": [
-      { "src": "/", "dest": "/" },
-      { "src": "/test", "dest": "/" }
+    "rewrites": [
+      { "src": "/(.*)", "dest": "/" }
     ]
   }
   
