--- a/app/vercel.json
+++ b/app/vercel.json
@@ -9,11 +9,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "app/routes/auth2.py"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "app/routes/users.py"
+      "dest": "app/main.py"
     }
   ]
 }
