--- a/vercel.json
+++ b/vercel.json
@@ -2,50 +2,10 @@
   
  
   "version": 2,
-    
-   
-  "builds": [
-      
-     
-  {
-        
-       
-  "src": "main.py",
-        
-       
-  "use": "@vercel/python"
-      
-     
-  }
-    
-   
-  ],
     "routes": [
-      
-     
-  {
-        
-       
-  "src": "/(.*)",
-        
-       
-  "dest": "/main.py"
-      
-     
+  {     
+  "src": "/(.*)",     
+  "dest": "app/main.py" 
   }
-    
-   
-  ],
-    
-   
-  "env": {
-      
-     
-  "MONGODB_URI": "mongodb+srv://gastonhromero7:Messi41175282@cluster0.pu03jpc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0",
-      
-     
-  "OTHER_ENV_VAR": "value"
-    
-   
-  }
+  ]
   }
