--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,13 @@
 {
   "version": 2,
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "app/main.py"
+  "functions": {
+    "api": {
+      "handler": "main.app",
+      "runtime": "python3.8"
     }
+  },
+  "routes": [
+    { "src": "/(.*)", "dest": "/app/main.py" },
+    { "src": "/(.*)", "dest": "/main.py" }
   ]
 }
