--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,9 @@
 {
-  "version": 2,
-  "functions": {
-    "api": {
-      "handler": "main.app",
-      "runtime": "python3.8"
-    }
-  },
+    "builds": [
+      { "src": "*.html", "use": "@vercel/static" },
+      { "src": "*.py", "use": "@vercel/python" }
+    ]
+  ,
   "routes": [
     { "src": "/(.*)", "dest": "/app/main.py" },
     { "src": "/(.*)", "dest": "/main.py" }
