--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,6 @@
     ]
   ,
   "routes": [
-    { "src": "/(.*)", "dest": "/app/main.py" },
-    { "src": "/(.*)", "dest": "/main.py" }
+    { "src": "/(.*)", "dest": "/app/main.py" }
   ]
 }
