--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,11 @@
 {
-    "builds": [
-      { "src": "*.html", "use": "@vercel/static" },
-      { "src": "*.py", "use": "@vercel/python" }
-    ]
-  ,
+  "version": 2,
+  "functions": {
+    "app/main.py": {
+      "runtime": "vercel-python@0.5.1"
+    }
+  },
   "routes": [
-    { "src": "/(.*)", "dest": "/app/main.py" }
+    { "src": "/(.*)", "dest": "app/main.py" }
   ]
 }
