--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,15 @@
 {
   "version": 2,
-  "functions": {
-    "app/main.py": {
-      "runtime": "vercel-python@0.5.1"
+  "builds": [
+    {
+      "src": "main.py",
+      "use": "@vercel/python"
     }
-  },
+  ],
   "routes": [
-    { "src": "/(.*)", "dest": "app/main.py" }
+    {
+      "src": "/(.*)",
+      "dest": " app/main.py"
+    }
   ]
 }
