--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "functions": {
     "api/app/main.py": {
-      "runtime": "python3.12.3"
+      "runtime": "vercel-python@0.5.1"
     }
   },
   "routes": [
