--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "functions": {
     "api/main.py": {
-      "runtime": "python3.12"
+      "runtime": "@vercel/python@4.3.0"
     }
   },
   "routes": [
