--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,12 @@
 {
   "version": 2,
-  "functions": {
-    "api/main.py": {
-      "runtime": "@vercel/python@4.3.0"
-    }
-  },
+  "builds": [
+    { "src": "api/main.py", "use": "@vercel/python" }
+  ],
   "routes": [
     { "src": "/(.*)", "dest": "api/main.py" }
-  ]
+  ],
+  "env": {
+    "PYTHON_VERSION": "3.12"
+  }
 }
