--- a/api/vercel.json
+++ b/api/vercel.json
@@ -4,5 +4,5 @@
     { "src": "api/main.py", "use": "@vercel/python" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "api/main.py" }
+    { "src": "/(.*)", "dest": "main.py" }
   ]}
